<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TV_KotaAwal_IDXML"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/TV_KotaAwal"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/S_KotaAwal_ID_XML"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp">

    </Spinner>

    <TextView
        android:id="@+id/TV_KotaAkhir_IDXML"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/TV_KotaAkhir"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/S_KotaAkhir_ID_XML"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp">

    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TV_Biaya_IDXML"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:text="@string/TV_Biaya"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TV_BiayaHasil_IDXML"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:text="@string/TV_BiayaHasil"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/B_Proses_IDXML"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/B_Proses"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/B_Keluar_IDXML"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:text="@string/B_Keluar"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>
</LinearLayout>